if (SHIVA_USE_VULKAN_AS_RENDERER)
    include(shiva/vulkan/graphics/CMakeSources.cmake)
    set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
    find_package(Vulkan REQUIRED)
    message("Vulkan_FOUND " ${Vulkan_FOUND})
    message("Vulkan_INCLUDE_DIRS " ${Vulkan_INCLUDE_DIRS})
    CREATE_MODULE_PLUGIN(shiva::vulkan "${MODULE_SOURCES}" ${MODULE_PATH} "graphics" "vulkan/shiva")
    target_link_libraries(vulkan PUBLIC shiva::dll Vulkan::Vulkan shiva::graphics shiva::reflection)
    AUTO_TARGETS_PLUGINS_INSTALL(vulkan vulkan)
endif ()
